refactor: Add Stopwatch utility and refactor game loop timing