@@ -2,7 +2,6 @@ package com.example.service.strategy;
 
 import com.example.domain.Hex;
 import com.example.domain.HexType;
-import com.example.domain.UnitType;
 import com.example.dto.ArenaStateDto;
 import com.example.dto.MoveCommandDto;
 import com.example.service.Pathfinder;
@@ -19,7 +18,6 @@ public class FighterStrategy implements AntStrategy {
 
     private final Pathfinder pathfinder;
 
-    // --- Константы для настройки стратегии ---
     private static final int MIN_RAID_GROUP_SIZE = 4;
     private static final int THREAT_DETECTION_RADIUS = 3; // Радиус обнаружения угрозы у базы
     private static final int LOCAL_PURSUIT_ZONE_RADIUS = 10; // Радиус зоны контроля вокруг базы
@@ -66,7 +64,7 @@ public class FighterStrategy implements AntStrategy {
 
         List<ArenaStateDto.AntDto> currentDefenders = fighters.stream()
                 .filter(f -> defensivePerimeter.contains(new Hex(f.q(), f.r())))
-                .collect(Collectors.toList());
+                .toList();
 
         fighters.stream()
                 .filter(f -> !currentDefenders.contains(f))
@@ -81,14 +79,14 @@ public class FighterStrategy implements AntStrategy {
         List<Hex> vacantPerimeterHexes = defensivePerimeter.stream()
                 .filter(hex -> !claimedHexesThisTurn.contains(hex))
                 .sorted(Comparator.comparingInt(h -> h.distanceTo(state.spot())))
-                .collect(Collectors.toList());
+                .toList();
 
         Iterator<ArenaStateDto.AntDto> iterator = nonDefenders.iterator();
-        while(iterator.hasNext()){
+        while (iterator.hasNext()) {
             ArenaStateDto.AntDto fighter = iterator.next();
-            if(state.home().contains(new Hex(fighter.q(), fighter.r()))) {
-                if(!vacantPerimeterHexes.isEmpty()){
-                    Hex target = vacantPerimeterHexes.remove(0);
+            if (state.home().contains(new Hex(fighter.q(), fighter.r()))) {
+                if (!vacantPerimeterHexes.isEmpty()) {
+                    Hex target = vacantPerimeterHexes.removeFirst();
                     createAndClaimMove(fighter, target, state, commands, claimedHexesThisTurn, hexCosts, hexTypes);
                     iterator.remove(); // Этот боец получил задачу
                 }
